package Ex_11_1;

public enum Estado {
    STOCK, LEILAO, VENDAS;
}
